<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">曾经有一份真挚的爱情摆在我的面前我没有珍惜，直到失去的时候才后悔莫及，人生最痛苦的事情莫过于此······
    					如果上天能够给我一个再来一次的机会，我会对那个女孩子说三个字：”我爱你“，如果非要在这份爱上加个期限，
    					我希望是······一万年</string>
    <string name="app_name">悦览天下</string>
    <string name="confirm">确定</string>
    <string name="error">登录提示</string>
    <string name="record">登录</string>
    <string name="errorMessage">密码错误</string>
    <string name="noExist">用户不存在，请注册</string>
    <string name="enroll">注册</string>
    <string name="secret">密码</string>
    <string name="account">账户</string>
    <string name="name">姓名</string>
	<string name="cancel">取消</string>
	<string name="ublank">用户名不能为空</string>
	<string name="pblank">密码不能为空</string>
	<string name="hint1">请输入账号</string>
	<string name="hint2">请输入密码</string>
	<string name="spinner">您所在院系</string>
	<color name="black">#000000</color>
	<color name="bright">#00000000</color>
	<color name="white">#FFFFFF</color>
	<color name="slightblue">#00000F</color>
	<string name="searchHint">书名或作者名</string>
	<string name="searchText">搜索</string>
	<string name="heat">每月排行</string>
	<string name="newb">新书推荐</string>
</resources>
