<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/slightblue"
	>
<TextView 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:text="@string/account"
    android:gravity="left"
    android:textColor="@color/black"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />
 <EditText
 	android:id="@+id/username"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:layout_marginLeft="20dip"
 	android:layout_marginRight="20dip"
 	android:background="@color/bright"
 	android:scrollHorizontally="true"
 	android:singleLine="true"
 	android:hint="@string/hint1"
 	android:autoText="false"
 	android:capitalize="none"
 	android:gravity="fill_horizontal"
 	android:textAppearance="?android:attr/textAppearanceMedium"
 	/>
<TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:text="@string/secret"
 	android:textColor="@color/black"
    android:gravity="left"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />
 <EditText
 	android:id="@+id/password2"
 	android:layout_width="fill_parent"
 	android:layout_height="wrap_content"
 	android:layout_marginLeft="20dip"
 	android:hint="@string/hint2"
 	android:layout_marginRight="20dip"
 	android:scrollHorizontally="true"
 	android:singleLine="true"
 	android:autoText="false"
 	android:password="true"
 	android:background="@color/bright"
 	android:capitalize="none"
 	android:gravity="fill_horizontal"
 	android:textAppearance="?android:attr/textAppearanceMedium"
 	/>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
<Button
	android:id="@+id/record_1" 
	android:layout_width="wrap_content"    
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dip"
 	android:background="@color/bright"
    android:layout_below="@id/password2"
    android:text="@string/record"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />
<Button
	android:id="@+id/enroll" 
	android:layout_width="wrap_content"    
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/record_1"
    android:layout_marginLeft="20dip"
 	android:background="@color/bright"
    android:text="@string/enroll"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />
</RelativeLayout>
<Button
	android:id="@+id/cancel" 
	android:layout_width="wrap_content"    
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dip"
    android:text="@string/cancel"
 	android:background="@color/bright"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />
</LinearLayout>
