<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/icon5">
<ScrollView 
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  >
<RelativeLayout 
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  >
  <!-- 搜索版块 -->
<RelativeLayout android:id="@+id/searchBlock"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  >
<EditText
  android:id="@+id/searchText"  
  android:hint="@string/searchHint" 
  android:layout_marginLeft="5dip"
  android:layout_width="240dip" android:layout_height="40dip"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:background="@color/bright"
  />
<Button android:id="@+id/searchButton"
  android:layout_toRightOf="@id/searchText"
  android:layout_marginLeft="10dip"
  android:layout_width="wrap_content" android:layout_height="40dip"
  android:text="@string/searchText"
  />
  </RelativeLayout>
<LinearLayout 
  android:layout_below="@id/searchBlock"	android:id="@+id/galleryBlock" 
  android:layout_width="fill_parent" android:layout_height="100dip"
  >
  <!-- 图片版块 -->
<Gallery android:id="@+id/gallery"
  android:layout_width="fill_parent" android:layout_height="fill_parent"
  ></Gallery>
  </LinearLayout>
<RelativeLayout android:layout_below="@id/galleryBlock"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  >
  <!-- 排行榜版块 -->
<LinearLayout  android:id="@+id/heatLinear" 
  android:layout_alignParentRight="true"
  android:orientation="vertical"
  android:layout_width="160dip" android:layout_height="wrap_content"
  >
 <TextView android:text="@string/heat" 
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  />
<TextView android:id="@+id/heatLink1" android:text="text3"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:clickable="true"
  />
<TextView android:id="@+id/heatLink2" android:text="text4"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:clickable="true"
  />
  </LinearLayout>
  <!-- 新书推荐版块 -->
<LinearLayout 
  android:layout_toLeftOf="@id/heatLinear"
  android:orientation="vertical"
  android:layout_width="160dip" android:layout_height="wrap_content"
  >
<TextView android:text="@string/newb" 
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  />
<TextView android:id="@+id/newrmd1" android:text="text1"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:clickable="true"
  />
<TextView android:id="@+id/newrmd2" android:text="text2"
  android:layout_width="fill_parent" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  android:clickable="true"
  />
  </LinearLayout>
 <Button 
  android:id="@+id/confirm"  android:text="@string/confirm" 
  android:layout_below="@id/heatLinear" 
  android:layout_width="wrap_content" android:layout_height="wrap_content"
  android:textAppearance="?android:attr/textAppearanceMedium"
  />
  </RelativeLayout>
  </RelativeLayout>
  </ScrollView>
  </LinearLayout>
